<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="32dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_red"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/hint_fullname"
                android:textSize="@dimen/normal_text"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:maxLength="30"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:textSize="@dimen/normal_text"
                android:inputType="textEmailAddress"
                android:drawableTint="@color/colorDarkGray"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                tools:targetApi="m" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_email"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/nav_header_vertical_spacing"
                    android:text="+62"
                    android:gravity="center"
                    android:textSize="@dimen/normal_text"
                    android:drawableTint="@color/colorDarkGray"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    android:drawableStart="@drawable/ic_phone_black_24dp"
                    android:drawablePadding="@dimen/activity_horizontal_margin"
                    tools:targetApi="m"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nomor_telepon"
                    android:textSize="@dimen/normal_text"
                    android:inputType="number"
                    android:maxLength="16"/>

            </LinearLayout>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_term_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_condition"
            android:layout_below="@id/til_phone"
            android:textSize="@dimen/normal_text"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:textSize="@dimen/normal_text"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_term_condition"
            android:id="@+id/btn_register"
            android:background="@drawable/btn_primary_effect"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textSize="@dimen/normal_text"/>
            <TextView
                android:id="@+id/tv_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_signin"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>